--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-spring.application.name=WRM
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/wrm
+    username: postgres
+    password: 123
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+      show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
