Add default algorithm type configuration to application.yml and update WaitingRoom entity to use default-algorithm-type property

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+waiting-room:
+  default-algorithm-type: FIFO
