--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,4 +21,4 @@ waiting-room:
 visit:
   default-visitor-status: WAITING
   default-priority: 100
-  default-estimatedProcessingTime: PT10M
+  default-estimatedProcessingTime: 10m
